##Text encoding: utf-8

2005-06-20  Daniel Leidert <daniel.leidert@wgdd.de>
	* gcu/gchem3d-viewer.desktop.in: add NoDisplay=true to prevent making
	a menu entry (only useful for desktops, which fully support the menu
	and desktop specs by freedesktop.org)

2005-06-17  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: tests vector::at usability, changed version to 0.4.3.
	* gcu/gtkchem3dviewer.cc: fixed another compilation warning.
	* gcu/object.cc: make it compile with gcc-2.95 using a FreeBSD patch.

2005-06-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/atom.cc: fixed compilation warnings (using -Wall)
	for both gcc-3.4.x and gcc-4.0.x.
	* gcu/bond.cc: ditto.
	* gcu/bonobo-control.cc: ditto.
	* gcu/crystalatom.cc: ditto.
	* gcu/crystaldoc.cc: ditto.
	* gcu/crystalview.cc: ditto.
	* gcu/element.cc: ditto.
	* gcu/gtkperiodic.c: ditto.
	* gcu/object.cc: ditto.
	* gcu/object.h: ditto.
	* gcu/xml-utils.cc: ditto.
	* tests/testbonobocontrol.c: ditto.

2005-06-16  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/object.h: removed extra comment opening (Daniel Leidert).

2005-06-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/element.h: fixed compilation with g++-4.0 (#13273).
	*gcu/element.cc: ditto.

2005-05-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* Makefile.am: fixed typos.

2005-05-27  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: complete the gnome-2.4 stuff.

2005-05-22  Jean Bréfort  <jean.brefort@normalesup.org>
	* gcu/object.cc: changed locking mechanism (breaks compatibility).
	* gcu/object.h: ditto.

2005-05-04  Jean Bréfort  <jean.brefort@normalesup.org>
	* autogen.sh: fixed message.
	* Makefile.am: don't install .mime and .keys files for gnome >= 2.6.
	* configure.ac: ditto.

2005-04-26  Jean Bréfort  <jean.brefort@normalesup.org>
	* configure.ac: changed version to 0.4.2.
	* docs/reference/Makefile.am: fix installation directory.
	* gcu/object.h: add inline method Object::LockSignals.
